# SkyAlt

./: CHANGELOG.md  LICENSE  README.md
eula/: en.lic
languages/: cs.lang  en.lang
licenses/: cs.lic  en.lic
linux/: CMakeLists.txt  build_debug  build_release  check  cloc  depend  install_libs  valgrind  valgrind _mem
src/: db.c  db.h  file.c  file.h  gui.c  gui.h  io.c  io.h  language.c  language.h  license.c  license.h  log.c  log.h  main.c  map.c  map.h  media.c  media.h  os.c  os.h  std.c  std.h  ui.c  ui.h
src/db/: db_column.h  db_column_1.h  db_column_convert.h  db_column_format.h  db_column_hald.h  db_column_n.h  db_column_string32.h  db_column_switch.h  db_columns.h  db_filter.h  db_filter_funcs.h  db_insights.h  db_insights_funcs.h  db_jointed.h  db_root.h  db_rows.h  db_table.h  db_value.h
src/file/: file_cache.h  file_file.h  file_head.h  file_index.h  file_key.h  file_project.h  file_user.h
src/gui/: gui_audio.h  gui_box.h  gui_button.h  gui_calendarBig.h  gui_calendarSmall.h  gui_chart.h  gui_check.h  gui_color.h  gui_combo_dynamic.h  gui_combo_static.h  gui_edit.h  gui_file.h  gui_gallery.h  gui_group.h  gui_image.h  gui_item.h  gui_item2.h  gui_kanban.h  gui_layout.h  gui_layout_array.h  gui_level.h  gui_list.h  gui_map.h  gui_menu.h  gui_particles.h  gui_rating.h  gui_root.h  gui_scroll.h  gui_slider.h  gui_struct.h  gui_switch.h  gui_table.h  gui_tags.h  gui_text.h  gui_textMulti.h  gui_theme.h
src/gui2/: gui_base.h  gui_canvas.h  gui_edit.h  gui_layout.h  gui_layout_array.h  gui_scroll.h  gui_theme.h
windows/: SkyAlt.sln  SkyAlt.vcxproj
(+79 files in other folders)
